Fixing the navigation mis alignment - Prabhu

--- a/media/css/scss/section_header.scss
+++ b/media/css/scss/section_header.scss
@@ -57,7 +57,7 @@
         text-align:right;
         ul{
             position:relative;
-            left:510px;
+            left:475px;
             top:-30px;
             li{
                 padding:10px;
